whoops, forgot updated index.html

--- a/app/index.html
+++ b/app/index.html
@@ -22,20 +22,40 @@
         <div class="forcefield">
           <form>
             <div class="input-group">
-              <input type="text">
+              <input type="text" required>
               <label>Name</label>
               <div class="glance"></div>
             </div>
             <div class="input-group">
-              <input type="email">
+              <input type="email" required>
               <label>School Email</label>
               <div class="glance"></div>
               <div class="pill-right"> <span>.edu</span></div>
             </div>
             <div class="input-group">
-              <input type="password">
-              <label>Password</label>
+              <input type="text" required>
+              <label>Major</label>
               <div class="glance"></div>
+            </div>
+            <div class="input-group">
+              <input type="text" required>
+              <label>Github Account</label>
+              <div class="glance"></div>
+              <div class="pill-left"><span>@</span></div>
+            </div>
+            <div class="input-group">
+              <input type="text" required>
+              <label>Home State</label>
+              <div class="glance"></div>
+            </div>
+            <div class="input-group">
+              <input type="text" required>
+              <label>How did you hear about WildHacks?</label>
+              <div class="glance"></div>
+            </div>
+            <div class="input-group">
+              <input type="text">
+              <label>Team Name (if any)</label>
             </div>
           </form>
         </div>
