resizes much better and animates when you punch it

--- a/app/index.html
+++ b/app/index.html
@@ -34,30 +34,19 @@
             </div>
             <div class="input-group">
               <input type="text" required>
-              <label>Major</label>
-              <div class="glance"></div>
-            </div>
-            <div class="input-group">
-              <input type="text" required>
-              <label>Github Account</label>
+              <label>Github</label>
               <div class="glance"></div>
               <div class="pill-left"><span>@</span></div>
-            </div>
-            <div class="input-group">
-              <input type="text" required>
-              <label>Home State</label>
-              <div class="glance"></div>
-            </div>
-            <div class="input-group">
-              <input type="text" required>
-              <label>How did you hear about WildHacks?</label>
-              <div class="glance"></div>
             </div>
             <div class="input-group">
               <input type="text">
               <label>Team Name (if any)</label>
             </div>
           </form>
+          <div class="thanks">
+            <h2>That just happened.</h2><img src="images/fyeah.png">
+            <h2>(You are welcome.)</h2>
+          </div>
         </div>
       </div>
       <div class="submit-btn">Punch it!</div>
