animation fixes & generalization; font resizing

--- a/app/index.html
+++ b/app/index.html
@@ -42,9 +42,14 @@
               <input type="text">
               <label>Team Name (if any)</label>
             </div>
+            <div class="input-group">
+              <input type="text" required>
+              <label>How did you hear about us?</label>
+              <div class="glance"></div>
+            </div>
           </form>
           <div class="thanks">
-            <h2>That just happened.</h2><img src="images/fyeah.png">
+            <h2>That just happened.</h2><img src="images/fyeah.png" style="max-height: 250px">
             <h2>(You are welcome.)</h2>
           </div>
         </div>
