modularize some sass

--- a/app/index.html
+++ b/app/index.html
@@ -6,57 +6,40 @@
     <meta name="description" content="3d Form Test Concept">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- vendor.css is currently empty-->
-    <!-- build:css styles/vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css styles/main.css -->
+    <!-- build:css styles/vendor.css-->
+    <!-- bower:css-->
+    <!-- endbower-->
+    <!-- endbuild-->
+    <!-- build:css styles/main.css-->
     <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
+    <!-- endbuild-->
     <script src="http://use.edgefonts.net/marvel:i4,n7,n4,i7:all.js"></script>
   </head>
   <body>
-    <div class="formula login">
+    <div class="formula">
       <div class="header-img"></div>
       <div class="primary-window">
         <div class="forcefield">
           <form>
             <div class="input-group">
               <input type="text" required>
-              <label>Name</label>
+              <label>Username</label>
               <div class="glance"></div>
             </div>
             <div class="input-group">
-              <input type="email" required>
-              <label>School Email</label>
-              <div class="glance"></div>
-              <div class="pill-right"> <span>.edu</span></div>
-            </div>
-            <div class="input-group">
-              <input type="text" required>
-              <label>Github</label>
-              <div class="glance"></div>
-              <div class="pill-left"><span>@</span></div>
-            </div>
-            <div class="input-group">
-              <input type="text">
-              <label>Team Name (if any)</label>
-            </div>
-            <div class="input-group">
-              <input type="text" required>
-              <label>How did you hear about us?</label>
+              <input type="password" required>
+              <label>Password</label>
               <div class="glance"></div>
             </div>
           </form>
           <div class="thanks">
-            <h2>That just happened.</h2><img src="images/fyeah.png" style="max-height: 250px">
-            <h2>(You are welcome.)</h2>
+            <h2>Yo, you just got logged in!</h2><img src="images/fyeah.png" style="max-height: 165px">
           </div>
         </div>
       </div>
       <div class="submit-btn">Punch it!</div>
     </div>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
     <!--script.
     (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
     function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
@@ -67,12 +50,12 @@
     
     -->
     <!-- vendor.js is currently empty-->
-    <!-- build:js scripts/vendor.js -->
-    <!-- bower:js -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:js scripts/main.js -->
+    <!-- build:js scripts/vendor.js-->
+    <!-- bower:js-->
+    <!-- endbower-->
+    <!-- endbuild-->
+    <!-- build:js scripts/main.js-->
     <script src="scripts/main.js"></script>
-    <!-- endbuild -->
+    <!-- endbuild-->
   </body>
 </html>
