--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <!-- build:css styles/main.css-->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild-->
-    <script src="http://use.edgefonts.net/marvel:i4,n7,n4,i7:all.js"></script>
+    <script src="https://use.edgefonts.net/marvel:i4,n7,n4,i7:all.js"></script>
   </head>
   <body>
     <div class="formula">
@@ -33,7 +33,7 @@
             </div>
           </form>
           <div class="thanks">
-            <h2>Yo, you just got logged in!</h2><img src="images/fyeah.png" style="max-height: 165px">
+            <h2>Yo, you just got logged in!</h2><img src="./images/fyeah.png" style="max-height: 165px">
           </div>
         </div>
       </div>
