Various improvments, box-sizing, more

--- a/app/index.html
+++ b/app/index.html
@@ -13,11 +13,10 @@
     <!-- build:css styles/main.css-->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild-->
-    <script src="https://use.edgefonts.net/marvel:i4,n7,n4,i7:all.js"></script>
   </head>
   <body>
     <div class="formula">
-      <div class="header-img"></div>
+      <div class="header"></div>
       <div class="primary-window">
         <div class="forcefield">
           <form>
@@ -27,8 +26,24 @@
               <div class="glance"></div>
             </div>
             <div class="input-group">
-              <input type="password" required>
-              <label>Password</label>
+              <input type="email" required>
+              <label>School Email</label>
+              <div class="glance"></div>
+              <div class="pill-right"><span>.edu</span></div>
+            </div>
+            <div class="input-group">
+              <input type="text" required>
+              <label>Github</label>
+              <div class="glance"></div>
+              <div class="pill-left"><span>@</span></div>
+            </div>
+            <div class="input-group">
+              <input type="text">
+              <label>Team Name (if any)</label>
+            </div>
+            <div class="input-group">
+              <input type="text" required>
+              <label>How did you hear about us?</label>
               <div class="glance"></div>
             </div>
           </form>
