--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
           </div>
         </div>
       </div>
-      <div class="submit-btn">Punch it!</div>
+      <div class="next-btn"><span>Next</span></div>
     </div>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
     <!--script.
