Pages stacking and working; now need animating

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,40 @@
   <body>
     <div class="formula">
       <div class="header"></div>
-      <div class="primary-window">
+      <div class="next-btn"><span>Next</span></div>
+      <div class="primary-window page">
+        <div class="forcefield">
+          <form>
+            <div class="input-group">
+              <input type="text" required>
+              <label>Username</label>
+              <div class="glance"></div>
+            </div>
+            <div class="input-group">
+              <input type="email" required>
+              <label>School Email</label>
+              <div class="glance"></div>
+              <div class="pill-right"><span>.edu</span></div>
+            </div>
+            <div class="input-group">
+              <input type="text" required>
+              <label>Github</label>
+              <div class="glance"></div>
+              <div class="pill-left"><span>@</span></div>
+            </div>
+            <div class="input-group">
+              <input type="text">
+              <label>Team Name (if any)</label>
+            </div>
+            <div class="input-group">
+              <input type="text" required>
+              <label>How did you hear about us?</label>
+              <div class="glance"></div>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="primary-window page">
         <div class="forcefield">
           <form>
             <div class="input-group">
@@ -52,7 +85,6 @@
           </div>
         </div>
       </div>
-      <div class="next-btn"><span>Next</span></div>
     </div>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
     <!--script.
