restyling and copy changes

--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>EPIC Application</title>
-    <meta name="description" content="Apply to EPIC, Northwestern's premier Entrepreneurship Student Group!">
+    <title>WildHacks 2015 Application</title>
+    <meta name="description" content="Apply to WildHacks 2015, Northwestern's ONLY Hackathon!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- vendor.css is currently empty-->
     <!-- build:css styles/vendor.css-->
@@ -73,83 +73,84 @@
           </div>
           <div class="primary-window page"><i class="back-btn">Back</i>
             <div class="forcefield">
-              <h2>I am a...</h2>
-              <div class="input-group checkboxes">
-                <input id="hacker" type="checkbox" name="entry.2003569147" required>
-                <label>Hacker</label>
-                <input id="designer" type="checkbox" name="entry.1080060025" required>
-                <label>Designer</label>
-                <input id="builder" type="checkbox" name="entry.711584580" required>
-                <label>Builder</label>
-                <input id="dinosaur" type="checkbox" name="entry.1762834979" required>
-                <label>Dinosaur</label>
+              <h2>Where Can We Find You?</h2>
+              <div class="input-group">
+                <input id="github" type="text" name="">
+                <label>Github Link</label>
+                <div class="glance"></div>
               </div>
               <div class="input-group">
-                <textarea id="explain-skills" name="entry.549867061" required></textarea>
-                <label>Explain your selections</label>
+                <input id="website" type="text" name="">
+                <label>Website</label>
+                <div class="glance"></div>
+              </div>
+              <div class="input-group">
+                <input id="resume" type="file" name="">
+                <label>Resume</label>
+                <div class="glance"></div>
+              </div>
+            </div>
+          </div>
+          <div class="primary-window page"><i class="back-btn">Back</i>
+            <div class="forcefield">
+              <h2>Some Boring Stuff</h2>
+              <div class="input-group">
+                <select id="gender" required>
+                  <option value>Please Select</option>
+                  <option value="Male">Male</option>
+                  <option value="Female">Female</option>
+                  <option value="Other">Other</option>
+                  <option value="Prefer not to specify">Prefer not to specify</option>
+                </select>
+                <label>Gender</label>
+              </div>
+              <div class="input-group">
+                <select id="shirt" required>
+                  <option value>Please Select</option>
+                  <option value="Small">Small</option>
+                  <option value="Medium">Medium</option>
+                  <option value="Large">Large</option>
+                  <option value="XL">XL</option>
+                  <option value="XXL">XXL</option>
+                </select>
+                <label>Shirt Size (Unisex)</label>
+              </div>
+              <div class="input-group">
+                <select id="job" required>
+                  <option value>Please Select</option>
+                  <option value="Small">None</option>
+                  <option value="Medium">Internship</option>
+                  <option value="Large">Full-Time</option>
+                  <option value="XL">Part-Time (With School)</option>
+                </select>
+                <label>Job Interest Level</label>
               </div>
             </div>
           </div>
             <div class="primary-window page"><i class="back-btn">Back</i>
               <div class="forcefield">
-                <h2>What's your story? Tell us about yourself.</h2>
+                <h2>What do you daydream about?</h2>
                 <div class="input-group">
                   <textarea id="story" required name="entry.1482811689"></textarea>
-                  <label>Ex: What are you passionate about? What was your journey to NU?</label>
+                  <label>Ex: The biggest, most banana-y banana bread</label>
                 </div>
               </div>
             </div>
             <div class="primary-window page"><i class="back-btn">Back</i>
               <div class="forcefield">
-                <h2>Why does EPIC matter to Northwestern?</h2>
-                <div class="input-group">
-                  <textarea id="why-epic-matters" required name="entry.1038701340"></textarea>
-                  <label>How is it different from other organizations?</label>
-                </div>
-              </div>
-            </div>
-            <div class="primary-window page"><i class="back-btn">Back</i>
-              <div class="forcefield">
-                <h2>Why are you interested in joining EPIC?</h2>
-                <div class="input-group">
-                  <textarea id="why-interested" required name="entry.1277416023"></textarea>
-                  <label>What do you hope to learn? What skills do you hope to gain?</label>
-                </div>
-              </div>
-            </div>
-            <div class="primary-window page"><i class="back-btn">Back</i>
-              <div class="forcefield">
-                <h2>How will you contribute to your team?</h2>
-                <div class="input-group">
-                  <textarea id="how-contribute" required name="entry.1133447629"></textarea>
-                  <label>Whichever it may be. How will you foster inter-team cooperation?</label>
-                </div>
-              </div>
-            </div>
-            <div class="primary-window page"><i class="back-btn">Back</i>
-              <div class="forcefield">
-                <h2>What else are you involved in?</h2>
-                <div class="input-group">
-                  <textarea id="other-involvements" required name="entry.93355119"></textarea>
-                  <label>e.g.; Work-study, ISBE, DOJO, etc.</label>
-                </div>
-              </div>
-            </div>
-            <div class="primary-window page"><i class="back-btn">Back</i>
-              <div class="forcefield">
-                <h2>Why are you the best person for EPIC?</h2>
+                <h2></h2>
                 <div class="input-group">
                   <textarea id="elevator-pitch" required name="entry.555173403"></textarea>
-                  <label>5 Minutes! Elevator Pitch! Go!</label>
+                  <label>Uhh, uhh, uhhhhhhhhh...</label>
                 </div>
               </div>
             </div>
             <div class="primary-window page"><i class="back-btn">Back</i>
               <div class="forcefield">
-                <h2>Anything else you would like us to consider?</h2>
+                <h2>Anything else we need to know?</h2>
                 <div class="input-group">
                   <textarea id="anything-else" required name="entry.1658748676"></textarea>
-                  <label>Maybe share some fun (or serious) facts. :)</label>
+                  <label>E.g. dietary restrictions, etc</label>
                 </div>
               </div>
               <div class="thanks">
