restyling and copy changes

--- a/app/index.html
+++ b/app/index.html
@@ -95,8 +95,8 @@
             <div class="forcefield">
               <h2>Some Boring Stuff</h2>
               <div class="input-group">
-                <select id="gender" required>
-                  <option value>Please Select</option>
+                <select id="dropdown" required>
+                  <option value="">Please Select</option>
                   <option value="Male">Male</option>
                   <option value="Female">Female</option>
                   <option value="Other">Other</option>
@@ -105,8 +105,8 @@
                 <label>Gender</label>
               </div>
               <div class="input-group">
-                <select id="shirt" required>
-                  <option value>Please Select</option>
+                <select id="dropdown" required>
+                  <option value="">Please Select</option>
                   <option value="Small">Small</option>
                   <option value="Medium">Medium</option>
                   <option value="Large">Large</option>
@@ -116,8 +116,8 @@
                 <label>Shirt Size (Unisex)</label>
               </div>
               <div class="input-group">
-                <select id="job" required>
-                  <option value>Please Select</option>
+                <select id="dropdown" required>
+                  <option value="">Please Select</option>
                   <option value="Small">None</option>
                   <option value="Medium">Internship</option>
                   <option value="Large">Full-Time</option>
