fixed validation for select

--- a/app/index.html
+++ b/app/index.html
@@ -34,19 +34,19 @@
             <div class="forcefield">
               <h2>Welcome to the Official EPIC Application!</h2>
               <div class="input-group">
-                <input id="name" type="text" name="entry.354342888" required>
-                <label>Name (First and Last)</label>
+                <input type="text" name="entry.354342888" required>
+                <label>First Name</label>
                 <div class="glance"></div>
               </div>
               <div class="input-group">
-                <input id="email" type="email" name="entry.436547589" required>
-                <label>School Email</label>
+                <input type="email" name="entry.436547589" required>
+                <label>Last Name</label>
                 <div class="glance"></div>
                 <div class="pill-right"><span>.edu</span></div>
               </div>
               <div class="input-group">
-                <input id="hearsay" type="text" name="entry.1486322634" required>
-                <label>How did you hear about our application?</label>
+                <input type="text" name="entry.1486322634" required>
+                <label>School</label>
                 <div class="glance"></div>
               </div>
             </div>
@@ -85,7 +85,7 @@
                 <div class="glance"></div>
               </div>
               <div class="input-group">
-                <input id="resume" type="file" name="">
+                <input id="file" type="file" name="">
                 <label>Resume</label>
                 <div class="glance"></div>
               </div>
@@ -95,7 +95,7 @@
             <div class="forcefield">
               <h2>Some Boring Stuff</h2>
               <div class="input-group">
-                <select id="dropdown" required>
+                <select id="gender" required>
                   <option value="">Please Select</option>
                   <option value="Male">Male</option>
                   <option value="Female">Female</option>
@@ -105,7 +105,7 @@
                 <label>Gender</label>
               </div>
               <div class="input-group">
-                <select id="dropdown" required>
+                <select id="shirt" required>
                   <option value="">Please Select</option>
                   <option value="Small">Small</option>
                   <option value="Medium">Medium</option>
@@ -116,32 +116,28 @@
                 <label>Shirt Size (Unisex)</label>
               </div>
               <div class="input-group">
-                <select id="dropdown" required>
-                  <option value="">Please Select</option>
-                  <option value="Small">None</option>
-                  <option value="Medium">Internship</option>
-                  <option value="Large">Full-Time</option>
-                  <option value="XL">Part-Time (With School)</option>
-                </select>
-                <label>Job Interest Level</label>
+                <input type="number">
+                <label>How many hackathons have you been to?</label>
+                <div class="glance"></div>
+              </div>
+            </div>
+          </div>
+          <div class="primary-window page"><i class="back-btn">Back</i>
+            <div class="forcefield">
+              <h2>Some Housekeeping</h2>
+              <div class="input-group">
+                <input type="radio" required>
+                <label>Will you be 18 by Nov. 21, 2015?</label>
+                <div class="glance"></div>
               </div>
             </div>
           </div>
             <div class="primary-window page"><i class="back-btn">Back</i>
               <div class="forcefield">
-                <h2>What do you daydream about?</h2>
+                <h2>Why do you want to come to WildHacks?</h2>
                 <div class="input-group">
                   <textarea id="story" required name="entry.1482811689"></textarea>
-                  <label>Ex: The biggest, most banana-y banana bread</label>
-                </div>
-              </div>
-            </div>
-            <div class="primary-window page"><i class="back-btn">Back</i>
-              <div class="forcefield">
-                <h2></h2>
-                <div class="input-group">
-                  <textarea id="elevator-pitch" required name="entry.555173403"></textarea>
-                  <label>Uhh, uhh, uhhhhhhhhh...</label>
+                  <label>Because I hate myself</label>
                 </div>
               </div>
             </div>
