scroll background with next page

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
         <form>
           <div class="primary-window page current">
             <div class="forcefield">
-              <h2>Welcome to the Official EPIC Application!</h2>
+              <h2>Welcome to the WildHacks Application!</h2>
               <div class="input-group">
                 <input type="text" name="entry.354342888" required>
                 <label>First Name*</label>
@@ -117,7 +117,7 @@
                   <option value="XL">XL</option>
                   <option value="XXL">XXL</option>
                 </select>
-                <label>Shirt Size (Unisex)</label>
+                <label>Shirt Size* (Unisex)</label>
               </div>
               <div class="input-group">
                 <input id="hackathons" type="number" required>
@@ -144,7 +144,7 @@
               </div>
               <div class="input-group">
                 <input type="checkbox" name="" required>
-                <label>I agree to the MLH Code of Conduct</label>
+                <label>I agree to the <a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf">MLH Code of Conduct.</a>*</label>
               </div>
             </div>
           </div>
@@ -156,17 +156,8 @@
                   <label>Because I hate myself</label>
                 </div>
               </div>
-            </div>
-            <div class="primary-window page"><i class="back-btn">Back</i>
-              <div class="forcefield">
-                <h2>Anything else we need to know?</h2>
-                <div class="input-group">
-                  <textarea id="anything-else" required name="entry.1658748676"></textarea>
-                  <label>E.g. dietary restrictions, etc</label>
-                </div>
-              </div>
               <div class="thanks">
-                <h3>Thanks for applying! We'll be in touch. :D</h3><img src="./images/fyeah2.png">
+                <h3>Thanks for applying! Be sure to follow us for updates!</h3>
               </div>
             </div>
         </form>
