added step counter in page corner

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
         </div>
         <form>
           <div class="primary-window page current">
+            <div class="place">1/7</div>
             <div class="forcefield">
               <h2>Welcome to the WildHacks Application!</h2>
               <div class="input-group">
@@ -50,7 +51,8 @@
               </div>
             </div>
           </div>
-          <div class="primary-window page"><i class="back-btn">Back</i>
+          <div class="primary-window page">
+            <div class="place">2/7</div><i class="back-btn">Back</i>
             <div class="forcefield">
               <h2>Some Basic Info</h2>
               <div class="input-group">
@@ -70,7 +72,8 @@
               </div>
             </div>
           </div>
-          <div class="primary-window page"><i class="back-btn">Back</i>
+          <div class="primary-window page">
+            <div class="place">3/7</div><i class="back-btn">Back</i>
             <div class="forcefield">
               <h2>Where Can We Find You?</h2>
               <div class="input-group">
@@ -85,7 +88,8 @@
               </div>
             </div>
           </div>
-          <div class="primary-window page"><i class="back-btn">Back</i>
+          <div class="primary-window page">
+            <div class="place">4/7</div><i class="back-btn">Back</i>
             <div class="forcefield">
               <h2>Do You Have a Resume?</h2>
               <div class="input-group">
@@ -95,7 +99,8 @@
               </div>
             </div>
           </div>
-          <div class="primary-window page"><i class="back-btn">Back</i>
+          <div class="primary-window page">
+            <div class="place">5/7</div><i class="back-btn">Back</i>
             <div class="forcefield">
               <h2>Some Boring Stuff</h2>
               <div class="input-group">
@@ -126,7 +131,8 @@
               </div>
             </div>
           </div>
-          <div class="primary-window page"><i class="back-btn">Back</i>
+          <div class="primary-window page">
+            <div class="place">6/7</div><i class="back-btn">Back</i>
             <div class="forcefield">
               <h2>Some Housekeeping</h2>
               <div class="input-group">
@@ -148,18 +154,19 @@
               </div>
             </div>
           </div>
-            <div class="primary-window page"><i class="back-btn">Back</i>
-              <div class="forcefield">
-                <h2>Why do you want to come to WildHacks?</h2>
-                <div class="input-group">
-                  <textarea id="story" required name="entry.1482811689"></textarea>
-                  <label>Because I hate myself</label>
-                </div>
-              </div>
-              <div class="thanks">
-                <h3>Thanks for applying! Be sure to follow us for updates!</h3>
+          <div class="primary-window page">
+            <div class="place">7/7</div><i class="back-btn">Back</i>
+            <div class="forcefield">
+              <h2>Why do you want to come to WildHacks?</h2>
+              <div class="input-group">
+                <textarea id="explain-skills" name="entry.549867061" required></textarea>
+                <label>Just tell us the truth or something</label>
               </div>
             </div>
+            <div class="thanks">
+              <h3>Thanks for applying! Be sure to follow us for updates!</h3>
+            </div>
+          </div>
         </form>
       </div>
     </div>
