--- a/app/index.html
+++ b/app/index.html
@@ -126,7 +126,7 @@
               </div>
               <div class="input-group">
                 <input id="hackathons" type="number" required>
-                <label>How many hackathons have you been to?</label>
+                <label>How many hackathons have you been to?*</label>
                 <div class="glance"></div>
               </div>
             </div>
