added social media icons

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- build:css styles/main.css-->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   </head>
   <body>
     <div id="formula-container">
@@ -160,11 +161,11 @@
               <h2>Why do you want to come to WildHacks?</h2>
               <div class="input-group">
                 <textarea id="explain-skills" name="entry.549867061" required></textarea>
-                <label>Just tell us the truth or something</label>
+                <label>It's okay, we can take the truth.</label>
               </div>
             </div>
             <div class="thanks">
-              <h3>Thanks for applying! Be sure to follow us for updates!</h3>
+              <h3>Thanks for applying! Be sure to follow us for updates!</h3><a href="https://www.facebook.com/nuwildhacks" target="_blank"><i class="fa fa-facebook-official fa-5x"></i></a><a href="https://twitter.com/NUWildHacks" target="_blank"><i class="fa fa-twitter fa-5x"></i></a>
             </div>
           </div>
         </form>
