added website link

--- a/app/index.html
+++ b/app/index.html
@@ -165,7 +165,7 @@
               </div>
             </div>
             <div class="thanks">
-              <h3>Thanks for applying! Be sure to follow us for updates!</h3><a href="https://www.facebook.com/nuwildhacks" target="_blank"><i class="fa fa-facebook-official fa-5x"></i></a><a href="https://twitter.com/NUWildHacks" target="_blank"><i class="fa fa-twitter fa-5x"></i></a>
+              <h3>Thanks for applying! Be sure to follow us for updates!</h3><a href="http://wildhacks.org" target="_blank"><i class="fa fa-globe fa-5x"></i></a><a href="https://www.facebook.com/nuwildhacks" target="_blank"><i class="fa fa-facebook-official fa-5x"></i></a><a href="https://twitter.com/NUWildHacks" target="_blank"><i class="fa fa-twitter fa-5x"></i></a>
             </div>
           </div>
         </form>
