Add participate in launch to 'I want to' options

--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,23 @@
           </div>
           <div class="primary-window page"><i class="back-btn">Back</i>
             <div class="forcefield">
+              <h2>I want to...</h2>
+              <div class="input-group checkboxes">
+                <input id="build-a-startup" type="checkbox" required>
+                <label>Build a Startup</label>
+                <input id="run-a-hackathon" type="checkbox" required>
+                <label>Run a Hackathon</label>
+                <input id="learn-to-code" type="checkbox" required>
+                <label>Learn to Code</label>
+                <input id="teach-entrepreneurship" type="checkbox" required>
+                <label>Teach Entrepreneurship</label>
+                <input id="participate-in-launch" type="checkbox">
+                <label>Participate in Launch</label>
+              </div>
+            </div>
+          </div>
+          <div class="primary-window page"><i class="back-btn">Back</i>
+            <div class="forcefield">
               <h2>I am a...</h2>
               <div class="input-group checkboxes">
                 <input id="hacker" type="checkbox" name="entry.2003569147" required>
@@ -81,8 +98,6 @@
                 <label>Designer</label>
                 <input id="builder" type="checkbox" name="entry.711584580" required>
                 <label>Builder</label>
-                <input id="dinosaur" type="checkbox" name="entry.1762834979" required>
-                <label>Dinosaur</label>
               </div>
               <div class="input-group">
                 <textarea id="explain-skills" name="entry.549867061" required></textarea>
