--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,17 @@
           </div>
           <div class="primary-window page"><i class="back-btn">Back</i>
             <div class="forcefield">
+              <h2>I am applying to (select as many as apply):</h2>
+              <div class="input-group checkboxes">
+                <input id="apply-for-launch" type="checkbox" required>
+                <label>Participate in Launch</label>
+                <input id="apply-for-epic" type="checkbox" required>
+                <label>Join EPIC Teams</label>
+              </div>
+            </div>
+          </div>
+          <div class="primary-window page"><i class="back-btn">Back</i>
+            <div class="forcefield">
               <h2>I want to...</h2>
               <div class="input-group checkboxes">
                 <input id="build-a-startup" type="checkbox" required>
@@ -83,8 +94,6 @@
                 <label>Learn to Code</label>
                 <input id="teach-entrepreneurship" type="checkbox" required>
                 <label>Teach Entrepreneurship</label>
-                <input id="participate-in-launch" type="checkbox">
-                <label>Participate in Launch</label>
               </div>
             </div>
           </div>
